# morpho-tokenizer

./: README.md  pyproject.toml
notebooks/: test_harness.ipynb
src/morpho_tokenizer/: __init__.py  morpho_vtb_tokenizer.py
tests/: test_basic.py
