[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "morpho-tokenizer"
version = "0.1.0"
description = "Morphology and etymology aware tokenizer"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
morpho_tokenizer = ["data/*.json.gz"]
